assert-struct/tests/snapshots/field_operations__deref_with_comparison.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/field_operations_errors/deref_with_comparison.rs:18:21
   |
18 |         *arc_value: > 60,  // Should be > 60 but actual is 50, will fail
   |                     ^^^^ got 50
